# libimobiledevice

./: .gitignore  AFC.c  AFC.h  AUTHORS  COPYING  IDE  Makefile.am  NEWS  README  README.md  autogen.sh  build.sh  buildme.sh  configure.ac  doxygen.cfg  doxygen.cfg.in  git-version-gen  iphone.c  libimobiledevice-1.0.pc.in  libimobiledevice.def  libimobiledevice.rc  libimobiledevice.vcproj  libimobiledevice.vcxproj  libimobiledevice.vcxproj.filters  libimobiledevice.vs2013.vcproj  libimobiledevice.vs2013.vcxproj  libimobiledevice.vs2013.vcxproj.filters  libiphone-1.0.pc.in  lockdown.c  main.c  memory.c  plist.c  resource.h  usbmux.c
.github/: FUNDING.yml
.github/workflows/: build.yml  fork.yml
common/: Makefile.am  debug.c  debug.h  msc.h  socket.c  socket.h  thread.c  thread.h  userpref.c  userpref.h  utils.c  utils.h
cython/: Makefile.am  afc.pxi  debugserver.pxi  diagnostics_relay.pxi  file_relay.pxi  heartbeat.pxi  house_arrest.pxi  imobiledevice.pxd  imobiledevice.pyx  installation_proxy.pxi  lockdown.pxi  misagent.pxi  mobile_image_mounter.pxi  mobilebackup.pxi  mobilebackup2.pxi  mobilesync.pxi  notification_proxy.pxi  property_list_client.pxi  property_list_service.pxi  restore.pxi  sbservices.pxi  screenshotr.pxi  stdint.pxi  webinspector.pxi
dev/: Makefile.am  afccheck.c  filerelaytest.c  housearresttest.c  ideviceclient.c  ideviceenterrecovery.c  ideviceheartbeat.c  iphone_id.c  iphoneclient.c  iphoneenterrecovery.c  iphoneinfo.c  lckdclient.c  main.c  msync.py  msyncclient.c  plutil.c  plutil.h  syslog_relay.c
docs/: Makefile.am  afcclient.1  idevice_id.1  idevicebackup.1  idevicebackup2.1  idevicebtlogger.1  ideviceconfig.1  idevicecrashreport.1  idevicedate.1  idevicedebug.1  idevicedebugserverproxy.1  idevicedevmodectl.1  idevicediagnostics.1  ideviceenterrecovery.1  ideviceimagemounter.1  ideviceinfo.1  idevicename.1  idevicenotificationproxy.1  idevicepair.1  ideviceprovision.1  idevicerun.1  idevicescreenshot.1  idevicesetlocation.1  idevicesyslog.1
docs/doxygen/: custom.css  footer.html  header.html  layout.xml
fdi/: 31-apple-mobile-device.fdi  Makefile.am
include/: Makefile.am  asprintf.h  endianness.h
include/libimobiledevice/: afc.h  bt_packet_logger.h  companion_proxy.h  debugserver.h  devicebackup2.h  diagnostics_relay.h  diagnostics_relay.h.orig  file_relay.h  heartbeat.h  house_arrest.h  installation_proxy.h  libimobiledevice.h  lockdown.h  lockdown.h.orig  mcinstall.h  misagent.h  mobile_image_mounter.h  mobileactivation.h  mobilebackup.h  mobilebackup2.h  mobileconfig.h  mobilesync.h  notification_proxy.h  ostrace.h  preboard.h  property_list_service.h  restore.h  reverse_proxy.h  sbservices.h  screenshotr.h  service.h  syslog_relay.h  webinspector.h
include/libiphone/: afc.h  file_relay.h  installation_proxy.h  libiphone.h  lockdown.h  mobilebackup.h  mobilesync.h  notification_proxy.h  sbservices.h
m4/: ac_pkg_cython.m4  ac_pkg_swig.m4  ac_python_devel.m4  as-compiler-flag.m4  ax_python_devel.m4  ax_swig_enable_cxx.m4  cython_python.m4  swig_python.m4
src/: AFC.c  AFC.h  InstallationProxy.c  InstallationProxy.h  Makefile.am  MobileSync.c  MobileSync.h  NotificationProxy.c  NotificationProxy.h  SBServices.c  SBServices.h  afc.c  afc.h  afccheck.c  asprintf.h  bplist.c  bt_packet_logger.c  bt_packet_logger.h  companion_proxy.c  companion_proxy.h  debug.c  debug.h  debugserver.c  debugserver.h  device_link_service.c  device_link_service.h  devicebackup2.c  devicebackup2.h  diagnostics_relay.c  diagnostics_relay.h  file_relay.c  file_relay.h  heartbeat.c  heartbeat.h  house_arrest.c  house_arrest.h  idevice.c  idevice.h  ifuse.c  initconf.c  (+59 more)
swig/: Makefile.am  __init__.py  imobiledevice.i  iphone.i
tools/: Makefile.am  afcclient.c  idevice_id.c  idevicebackup.c  idevicebackup2.c  idevicebackup4.c  idevicebtlogger.c  ideviceconfig.c  idevicecopycontainer.c  idevicecrashreport.c  idevicedate.c  idevicedebug.c  idevicedebugserverproxy.c  idevicedevmodectl.c  idevicediagnostics.c  ideviceenterrecovery.c  ideviceimagemounter.c  ideviceinfo.c  idevicelocation.c  idevicename.c  idevicenotificationproxy.c  idevicepair.c  ideviceprofile.c  ideviceprovision.c  idevicerun.c  idevicescreenshot.c  idevicesetlocation.c  idevicesyslog.c  iphone_id.c  iphonebackup.c  iphoneinfo.c  iphonesyslog.c  thread.c  thread.h
udev/: 89-libiphone.rules  89-libiphone.rules.in  Makefile.am  set-usb-configuration-3.sh
