man_MANS = \
	idevice_id.1 \
	ideviceinfo.1 \
	idevicebtlogger.1 \
	idevicesyslog.1 \
	idevicebackup.1 \
	idevicebackup2.1 \
	ideviceimagemounter.1 \
	idevicescreenshot.1 \
	idevicepair.1 \
	ideviceenterrecovery.1 \
	idevicedate.1 \
	ideviceprovision.1 \
	idevicedebugserverproxy.1 \
	idevicediagnostics.1 \
	idevicecrashreport.1 \
	idevicename.1 \
	idevicedebug.1 \
	idevicedevmodectl.1 \
	idevicenotificationproxy.1 \
	idevicesetlocation.1 \
	afcclient.1

EXTRA_DIST = $(man_MANS)

DISTCLEANFILES = html/* html
