nobase_include_HEADERS = libimobiledevice/libimobiledevice.h \
			 libimobiledevice/lockdown.h \
			 libimobiledevice/afc.h \
			 libimobiledevice/file_relay.h \
			 libimobiledevice/notification_proxy.h \
			 libimobiledevice/installation_proxy.h \
			 libimobiledevice/sbservices.h \
			 libimobiledevice/mobile_image_mounter.h \
			 libimobiledevice/screenshotr.h \
			 libimobiledevice/mobilesync.h \
			 libimobiledevice/mobilebackup.h \
			 libimobiledevice/restore.h
