EXTRA_DIST = asprintf.h endianness.h

nobase_include_HEADERS = libimobiledevice/libimobiledevice.h \
			 libimobiledevice/lockdown.h \
			 libimobiledevice/afc.h \
			 libimobiledevice/file_relay.h \
			 libimobiledevice/notification_proxy.h \
			 libimobiledevice/installation_proxy.h \
			 libimobiledevice/sbservices.h \
			 libimobiledevice/mobile_image_mounter.h \
			 libimobiledevice/screenshotr.h \
			 libimobiledevice/mobilesync.h \
			 libimobiledevice/mobilebackup.h \
			 libimobiledevice/house_arrest.h \
			 libimobiledevice/mobilebackup2.h \
			 libimobiledevice/misagent.h \
			 libimobiledevice/restore.h\
			 libimobiledevice/webinspector.h\
			 libimobiledevice/heartbeat.h\
			 libimobiledevice/diagnostics_relay.h\
			 libimobiledevice/debugserver.h\
			 libimobiledevice/syslog_relay.h\
			 libimobiledevice/property_list_service.h\
			 libimobiledevice/service.h
